# json-sticher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/test-1/: base.docs  base.json
examples/test-1/base/: hello.json
examples/test-1/base/hello/: q.json  r.data
examples/test-template/: main.json
examples/test-template/@models/: pattern-1.json
examples/test-template/@models/pattern-1/: hello.json
examples/test-template/main/: pattern-1.json
examples/test-template/main/interface-1/: head.data  impl.json  symbols.json  tail-inline.json
headers/: test.h
libs/: CMakeLists.txt
src/: main.cpp
